# Kutuphane-Yonetim-Sistemi

./: CMakeLists.txt  GONDERIM.md  README.md
include/: depo_tanimlari.h
include/entities/: Kategori.h  Kitap.h  OduncAlma.h  Rezervasyon.h  Uye.h  Yayinevi.h  Yazar.h  varlik.h
include/repositories/: depo.h
include/services/: KutuphaneServisi.h
include/utils/: TarihUtils.h
src/: main.cpp
src/entities/: Kategori.cpp  Kitap.cpp  OduncAlma.cpp  Rezervasyon.cpp  Uye.cpp  Yayinevi.cpp  Yazar.cpp  varlik.cpp
src/services/: KutuphaneServisi.cpp
